--- a/Code/Tools/EditorPluginScene/QtResources/resources.qrc
+++ b/Code/Tools/EditorPluginScene/QtResources/resources.qrc
@@ -50,5 +50,6 @@
 	<file>ezSimpleWindComponent.png</file>
 	<file>ezPlayerStartPointComponent.png</file>
 	<file>ezColorAnimationComponent.png</file>
+	<file>ezFluidWindVolumeComponent.png</file>
   </qresource>  
 </RCC>
